# frmb

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  doc.yml  tests.yml
assets/javascripts/: bundle.e1c3ead8.min.js
contributing/: index.html
docs/: contributing.md  extra.css  index.md  public-api.md  usage.md
docs/templates/python/material/: labels.html
frmb/: __init__.py  __main__.py  _cli.py  _menu.py  _parsing.py  _read.py  _tokens.py  _windows.py  _write.py
public-api/: index.html
search/: search_index.json
tests/: test_main.py  test_parsing.py  test_read.py  test_tokens.py  test_windows.py  test_write.py
tests/data/structure1/show/: faulty-saucisse.frmb  saucisse.frmb
tests/data/structure1/show/saucisse/: open in browser !.frmb
tests/data/structure1/studio/: FFMPEG.frmb  OIIO Tool.frmb
tests/data/structure1/studio/FFMPEG/: ffmpeg-togif.bat  video-to-gif-interactive.frmb  video-to-gif-presets.frmb
tests/data/structure1/studio/FFMPEG/video-to-gif-presets/: fps_50-size_1-dithering_sierra2_4a.frmb  fps_50-size_2-dithering_sierra2_4a.frmb  somescript.sh
tests/data/structure1/studio/OIIO Tool/: display-info.frmb
tests/data/structure2/: OIIO Tool.frmb
tests/data/structure2/OIIO Tool/: resize.frmb
usage/: index.html
