[tool.poetry]
name = "frmb"
version = "0.1.0"
description = "Convert file structures to right-click context menu for Windows."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "7.4"
coverage = "7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
