[tool.poetry]
name = "frmb"
version = "0.1.0"
description = "Convert file structures to right-click context menu for Windows."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/MrLixm/frmb"
keywords = ["context-menu", "Windows", "registry"]
packages = [
    { include = "frmb" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "7.4.*"
coverage = "7.4.*"
mkdocs = "1.5.3"
mkdocs-material = "9.5.*"
mkdocstrings = { version = "0.24.*", extras = ["python"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
